# pipelens

./: .eslintrc.js  .gitignore  92f51cf8-175d-4d2c-9ce7-bdda4645c82a_debug.json  Dockerfile-dashboard  Dockerfile.dashboard  LICENSE  README.md  docker-compose.yml  gantt.html  package-lock.json  package.json  steps-track.db  tsconfig.json  update-versions.sh
.github/workflows/: publish-dashboard.yml  publish-lib-py.yml  publish-lib-ts.yml  publish.yml  test-lib-py.yml  test-lib-ts.yml  test.yml
dashboard/: README.md  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.frontend_app.json  tsconfig.server.json  vite.config.ts
dashboard/test/: sql-storage-adapter.spec.ts
docs/: advanced-usage.md  basic-usage.md
docs/example/: example-decorator.ts  example.py  example.ts  example_decorator.py  gantt.html
lib-py/: README.md  pyproject.toml
lib-py/src/: __init__.py
lib-py/src/pipelens/: decorator.py  pipeline.py  pipeline_types.py
lib-py/src/pipelens/extension/: __init__.py
lib-py/src/pipelens/transport/: __init__.py  base_transport.py
lib-py/test/: test_chart.py  test_decorator.py  test_http_transport.py  test_pipeline.py  test_step.py
lib-ts/: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json
lib-ts/src/: index.ts  pipeline.ts
lib-ts/test/: decorator.spec.ts  http-transport.spec.ts  pipeline.spec.ts
sample/: example-decorator.ts  example.ts  test.ts
src/: chart.ts  decorator.ts  index.ts  pipeline.ts  step.ts
test/: chart.spec.ts  integration.spec.ts  pipeline.spec.ts  step.spec.ts
(+69 files in other folders)
