[tool.poetry]
name = "pipelens"
version = "1.14.0"
description = "An observability tool built to track, inspect and visualize intermediate steps in a pipeline, allowing user to easily debug or analyze through a dashboard."
authors = ["lokwkin <lokwkin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pipelens", from = "src"}]
homepage = "https://github.com/lokwkin/pipelens"
repository = "https://github.com/lokwkin/pipelens"
keywords = ["pipelens", "pipeline", "lens", "observability", "monitoring", "rag", "llm", "visualization", "tracing", "tracking", "debugging", "analytics", "performance", "metrics"]



[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.11.3"
pyee = "^13.0.0"
aiohttp = "^3.11.16"
types-requests = "^2.32.4.20260107"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
aioresponses = "^0.7.8"
ruff = "^0.8.0"

[tool.pytest.ini_options] # Configure pytest-asyncio to avoid deprecation warning
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
